# sandbox

./: .gitignore
docker_network/: Dockerfile  README.md  check.sql  docker-compose.yml
fastapi_sample/: .python-version  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
fastapi_sample/src/: main.py
fastapi_sample/templates/: index.html
lambda_container_image/container/: Dockerfile  Makefile  README.md  app.py
lambda_container_image/terraform/: .config.sample  .gitignore  backend.tf.sample  ecr.tf  iam.tf  lambda.tf  provider.tf  set_aws_credential.sh  variables.tf
lang_chain_sample/: .python-version  Makefile  README.md  llm_chain.py  llm_chain_memory.py  pyproject.toml
mysql_upsert/: Makefile  README.md
mysql_upsert/sql/: 0_schema.sql  1_initial_insert.sql  2_upsert.sql  initial_insert.sql  schema.sql  upsert.sql
node_bq_materialized_view/: .env.sample  README.md  package.json
node_bq_materialized_view/src/: index.ts
snowpark_sample/: .python-version  Makefile  README.md  pyproject.toml  sample_notebook.ipynb
tcp_ip_linux/: Dockerfile  Makefile  README.md  docker-compose.yml
tcp_ip_linux/.devcontainer/: devcontainer.json  docker-compose.yml
