[tool.poetry]
authors = ["Kosaku Ono <kevinrobot34@gmail.com>"]
description = "Prototype application"
name = "web_prototype"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = {extras = ["all"], version = "^0.85.1"}
jinja2 = "^3.1.2"
pandas = "^1.5.0"
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
matplotlib = "^3.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
