[tool.poetry]
name = "snowpark_sample"
version = "0.1.0"
description = ""
authors = ["Kosaku Ono <kevinrobot34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.0"
snowflake-snowpark-python = "^1.3.0"
pandas = "~1"
notebook = "^6.5.4"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
